fix: alignmentof  naigation menu options more to the right in all pages in media query min-width: 1025px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1300,6 +1300,8 @@ input[type=reset]{
       text-align: right;
       width: 1535px;
       display: inline-block;
+
+      margin-left: 220px;
     }
     nav ul > li {
           display: inline-block;
